--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="d-flex flex-column min-vh-100">
-        <header class="d-flex flex-column align-items-center mb-2">
-            <h1 class="p-5 pb-0">ROCK, PAPER, SCISSORS</h1>
+        <header class="d-flex flex-column align-items-center p-4">
+            <h1 class="p-0 m-0 display-3">Rock, Paper, Scissors</h1>
             <p class="lead">Match wits against the computer! Best of 5 wins!</p>
         </header>
         <main>
             <article>
                 <section>
-                    <h2 class="text-center p-3">Make a selection</h2>
-                    <div class="d-flex flex-row justify-content-around mb-5">
+                    <h1 class="text-center p-5">Make a selection</h1>
+                    <div class="d-flex flex-row justify-content-evenly mb-5">
                         <div class="choice d-flex flex-column align-items-center" onclick="selectItem('rock')">
                             <div>
                                 <img src="./images/rock.png" alt="rock" width="150" />
@@ -42,14 +45,14 @@
                 </section>
                 <section>
                     <div class="d-flex flex-column align-items-center">
-                        <h2 class="pb-2">Score</h2>
+                        <h1 class="pb-2">Score</h1>
                         <p id="roundElement"></p>
                         <div id="scoreboard" class="d-flex flex-row align-items-center justify-content-center">
-                            <div class="player d-flex flex-row justify-content-end me-5 pe-5">
-                                <h1>Player</h1><h1 id="playerBoxScore" class="text-end"></h1>
+                            <div class="player d-flex flex-row justify-content-end me-5">
+                                <h2>Player</h2><h2 id="playerBoxScore" class="text-end"></h2>
                             </div>
-                            <div class="computer d-flex flex-row justify-content-start ms-5 ps-5">
-                                <h1 id="computerBoxScore" class="text-start"></h1><h1>Computer</h1>
+                            <div class="computer d-flex flex-row justify-content-start ms-5">
+                                <h2 id="computerBoxScore" class="text-start"></h2><h2>Computer</h2>
                             </div>
                         </div>
                         <div id="scoreHistory" class="d-flex flex-row align-items-center justify-content-center">
@@ -66,6 +69,22 @@
             <div class="d-flex flex-row justify-content-center p-4">All Rights Reserved &copy; 2022</div>
         </footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./script.js"></script>
+    <div class="modal fade" id="myModal" role="dialog" tabindex="-1" aria-labelledby="myModal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body d-flex flex-column align-items-center p-2">
+                    <div id="gameResultImgContainer" class="m-4"></div>
+                    <h1 class="display-3" id="gameResultMessage"></h1>
+                    <p>Play another game?</p>
+                </div>
+                <div class="modal-footer d-flex flex-row align-items-center justify-content-center">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="closeModal()">No</button>
+                    <button type="button" class="btn btn-primary" onclick="reloadGame()">Yes</button>
+                  </div>
+            </div>
+        </div>
+    </div>
+<div class="modal-backdrop fade show" id="myBackdrop" style="display:none;"></div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="./script.js"></script>
 </body>
